<resources>
    <string name="app_name">CoClass</string>
    <string name="title">Welcome to CoClass!</string>
    <string name="hintUser">Email</string>
    <string name="hintPass">Password</string>
    <string name="Login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="googleIdToken">184872945134-ugej8u4vrnh9lo4a970p26rr54bstq7l.apps.googleusercontent.com</string>
    <string name="sign_out">Sign Out</string>
    <string name="do_you_want_to_use_this_username">Do you want to use this username?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="username">New username</string>
    <string name="create_user">Create an account</string>
    <string name="re_password">Re-Password</string>
    <string name="submit">Submit</string>
    <string name="username2">Username</string>
    <string name="your_course">Your course :</string>
    <string name="course_code">Course code</string>
    <string name="create">Create</string>
    <string name="join">Join</string>
    <string name="which_action_do_you_want_to_do">Which action do you want?</string>
    <string name="create_your_course">Create your course</string>
    <string name="course_name">Course name</string>
    <string name="your_course_code">Your course code</string>
    <string name="confirm">Confirm</string>
    <string name="example_id">ID ( 593040446-1 )</string>
    <string name="please_enter_your_id">Please enter your ID</string>
    <string name="Select_The_Action">Select The Action</string>
    <string name="your_score_is">Your score is</string>
    <string name="score">0</string>
    <string name="help">Help</string>
    <string name="about">About us</string>
    <string name="setting">Setting</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="teacher_aren_t_called">You have not called the teacher</string>
    <string name="export_to_json">Export to json</string>
    <string name="edit_your_id">Edit your ID</string>
    <string name="edit_username">Edit username</string>
    <string name="enter_your_new_username">Enter your new username</string>
    <string name="disraName">Name: Disra Udomboonyaluck</string>
    <string name="disraEmail">Email: disra_u@kkumail.com</string>
    <string name="phunonName">Name: Phunon Koysawat</string>
    <string name="phunonEmail">Email: phunon@kkumail.com</string>
    <string name="search">Click here to search...</string>
    <string name="TipDeleteCourse">How to Delete Course</string>
    <string name="DeletCourse">Hold click on the name you course that you want to delete. Then the functional menu delete will show so you can delete your course.</string>
    <string name="TipWhatIsCC">What is Course/Class ?</string>
    <string name="WhatIsCC">"The course is the subject that you want to manage and give some score for your student. Class is the subject that you join for study.</string>
    <string name="TipHowtoJoinClass">How to join class</string>
    <string name="HowToJoinClass">Click the floating action button what the plus symbol button then you would click join button and the course code you can get from your teacher.</string>
    <string name="marutName">Name: Marut Muengree</string>
    <string name="marutEmail">Email: marut_m@kkumail.com</string>
    <string name="enter_your_file_name">Enter your file name</string>
    <string name="id">ID</string>
    <string name="score_text">Score</string>
</resources>
