<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    android:gravity="center">

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/username2"
        android:gravity="center"/>

    <EditText
        android:id="@+id/yourID"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/example_id"
        android:gravity="center"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/hintUser"
        android:gravity="center"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/hintPass"
        android:gravity="center"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/rePass"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/re_password"
        android:gravity="center"
        android:inputType="textPassword"/>

    <com.dd.processbutton.iml.ActionProcessButton
        android:layout_marginTop="10dp"
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/submit"
        android:textColor="@color/cardview_light_background"
        android:textSize="15sp"/>

</LinearLayout>