<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_your_course"
        android:textSize="16sp"
        android:gravity="center"
        android:layout_marginBottom="5dp"/>

    <EditText
        android:id="@+id/courseName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/course_name"
        android:gravity="center"
        android:background="@drawable/edit_text_border"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:padding="5dp"/>

    <EditText
        android:id="@+id/code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/your_course_code"
        android:gravity="center"
        android:background="@drawable/edit_text_border"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:padding="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="5dp">

        <com.dd.processbutton.iml.ActionProcessButton
            android:id="@+id/confirm"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/confirm"
            android:textColor="@color/cardview_light_background"
            android:layout_marginRight="10dp"/>

        <ImageButton
            android:id="@+id/randomCode"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/random_btn_selector"/>

    </LinearLayout>



</LinearLayout>