<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/which_action_do_you_want_to_do"
        android:gravity="center"
        android:layout_marginBottom="16dp"
        android:textSize="16sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.dd.processbutton.iml.ActionProcessButton
            android:id="@+id/create"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/create"
            android:inputType="text"
            android:textColor="@color/cardview_light_background"
            android:layout_weight="1"
            android:layout_marginRight="5dp"/>

        <com.dd.processbutton.iml.ActionProcessButton
            android:id="@+id/join"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/join"
            android:inputType="text"
            android:textColor="@color/cardview_light_background"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"/>

    </LinearLayout>
</LinearLayout>