<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:layout_margin="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/title"
            android:textAlignment="center"
            android:textSize="25sp"/>

        <ImageView
            android:id="@+id/pic"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:scaleType="centerInside"
            android:src="@drawable/bg"
            android:layout_weight="5"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="20dp"
                android:gravity="center"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="@string/hintUser"
                    android:singleLine="true"
                    android:gravity="center"
                    android:background="@drawable/edit_text_border"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:textSize="15sp"/>

                <EditText
                    android:id="@+id/password"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:hint="@string/hintPass"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:gravity="center"
                    android:background="@drawable/edit_text_border"
                    android:layout_marginBottom="16dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:textSize="15sp"/>

                <com.dd.processbutton.iml.ActionProcessButton
                    android:id="@+id/login"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:textSize="12sp"
                    android:text="@string/Login"
                    android:background="@drawable/edit_text_border"
                    android:textColor="@color/cardview_light_background"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"
                    android:layout_marginRight="100dp"
                    android:layout_marginLeft="100dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="30dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/don_t_have_an_account"
                    android:gravity="center"/>

                <com.google.android.gms.common.SignInButton
                    android:id="@+id/sign_in_button"
                    android:layout_width="210dp"
                    android:layout_height="35dp"
                    android:textSize="14.5sp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"/>

                <com.dd.processbutton.iml.ActionProcessButton
                    android:id="@+id/createUser"
                    android:layout_width="210dp"
                    android:layout_height="40dp"
                    android:text="@string/create_user"
                    android:inputType="text"
                    android:textSize="12sp"
                    android:layout_gravity="center"
                    tools:ignore="TextViewEdits"
                    android:textColor="@color/cardview_light_background"/>
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>