<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HelpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/help1"
                android:layout_height="60dp"
                android:layout_width="match_parent"
                android:text="@string/TipWhatIsCC"
                android:textSize="20sp"
                android:clickable="true"
                android:gravity="start|center"
                android:paddingStart="60dp"
                android:background="@color/blue_light"/>

            <ImageView
                android:id="@+id/arrow1"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="15dp"
                android:background="@drawable/down"/>

            <TextView
                android:id="@+id/txt_help1"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textSize="15sp"
                android:gravity="start|center"
                android:paddingStart="40dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingEnd="10dp"
                android:text=""
                android:layout_below="@id/help1"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/help2"
                android:layout_height="60dp"
                android:layout_width="match_parent"
                android:text="@string/TipDeleteCourse"
                android:textSize="20sp"
                android:clickable="true"
                android:gravity="start|center"
                android:paddingStart="60dp"
                android:background="@color/blue_light"/>

            <ImageView
                android:id="@+id/arrow2"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="15dp"
                android:background="@drawable/down"/>

            <TextView
                android:id="@+id/txt_help2"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textSize="15sp"
                android:gravity="start|center"
                android:paddingStart="40dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingEnd="10dp"
                android:text=""
                android:layout_below="@id/help2"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/help3"
                android:layout_height="60dp"
                android:layout_width="match_parent"
                android:text="@string/TipHowtoJoinClass"
                android:textSize="20sp"
                android:clickable="true"
                android:gravity="start|center"
                android:paddingStart="60dp"
                android:background="@color/blue_light"/>

            <ImageView
                android:id="@+id/arrow3"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="15dp"
                android:background="@drawable/down"/>

            <TextView
                android:id="@+id/txt_help3"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textSize="15sp"
                android:gravity="start|center"
                android:paddingStart="40dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingEnd="10dp"
                android:text=""
                android:layout_below="@id/help3"/>
        </RelativeLayout>
    </LinearLayout>


</android.support.constraint.ConstraintLayout>